--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">轻链</string>
+    <string name="app_name">盖世付</string>
     <string name="paypwdwindowhint">输入交易密码</string>
     <string name="forgetpaypwd">忘记密码</string>
 
@@ -53,4 +53,11 @@
     <string name="placeinputaffpaypwd">请输入6位确认交易密码</string>
     <string name="placeinputpaypwd">请输入6位交易密码</string>
     <string name="forgetPwd">忘记密码</string>
+    <string name="CaptureCodeTitle">二维码识别</string>
+    <string name="NoShibie">识别不了？</string>
+    <string name="placeinputaddresshint">请手动输入转账地址</string>
+    <string name="next">下一步</string>
+    <string name="inputAddressTitle">输入地址</string>
+    <string name="resultTitel">扫描结果</string>
+    <string name="forgetpayPwd">修改支付密码</string>
 </resources>
