--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">盖世付</string>
+    <string name="app_name">Dot Pay</string>
     <string name="paypwdwindowhint">输入交易密码</string>
     <string name="forgetpaypwd">忘记密码</string>
 
@@ -12,7 +12,7 @@
     <string name="lockpwd_reset">重设</string>
     <string name="payment_hint">转账给</string>
     <string name="payment_money">付账金额</string>
-    <string name="Gsc">Gsc:</string>
+    <string name="Gsc">Dotc:</string>
     <string name="payment_inputhint">请输入转账金额</string>
     <string name="payment_affpay">确认付款</string>
     <string name="payment_title">付款</string>
@@ -20,7 +20,7 @@
     <string name="receipt_savepic">保存图片</string>
     <string name="receipt_history">收款记录</string>
     <string name="wode">我的</string>
-    <string name="Gscyue">Gsc余额：</string>
+    <string name="Gscyue">Dotc余额：</string>
     <string name="head">头像</string>
     <string name="nickname">昵称</string>
     <string name="gender">性别</string>
@@ -66,7 +66,7 @@
     <string name="address">转账地址：</string>
     <string name="realname">实名认证</string>
     <string name="placeinputinfo">请输入内容</string>
-    <string name="about_info"><![CDATA[\t\t盖世付是一款移动端轻钱包 App。旨在为用户提供一款安全放心、简单好用、功能强大的数字资产钱包应用。   \n\n\t【主要功能】\n\n  私钥自持，安全管理数字资产 \n- 私钥被加密后，安全存储在手机的沙盒文件系统里面。\n - 提供多种私钥备份策略，防丢防盗。   \n\n转帐收款，简单好用的轻钱包功能 - 轻钱包无需同步完整区块链数据，轻便快捷。 \n- 足够简单易用，用户熟悉的界面和交互方式。    \n GSC支付场景应用 \n- 线上线下GSC消费一键支付，安全快捷]]></string>
+    <string name="about_info"><![CDATA[\t\t是一款移动端轻钱包 App。旨在为用户提供一款安全放心、简单好用、功能强大的数字资产钱包应用。   \n\n\t【主要功能】\n\n  私钥自持，安全管理数字资产 \n- 私钥被加密后，安全存储在手机的沙盒文件系统里面。\n - 提供多种私钥备份策略，防丢防盗。   \n\n转帐收款，简单好用的轻钱包功能 - 轻钱包无需同步完整区块链数据，轻便快捷。 \n- 足够简单易用，用户熟悉的界面和交互方式。    \n =支付场景应用 \n- 线上线下消费一键支付，安全快捷]]></string>
     <string name="saoyisao">扫一扫</string>
     <string name="fukuan">付款</string>
     <string name="shoukuan">收款</string>
